--- a/IS1-20-DodardzhonovKK/IS1-20-DodardzhonovKK.csproj
+++ b/IS1-20-DodardzhonovKK/IS1-20-DodardzhonovKK.csproj
@@ -116,6 +116,9 @@
     <EmbeddedResource Include="Authh.resx">
       <DependentUpon>Authh.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Employee.resx">
+      <DependentUpon>Employee.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
